# online_dokon

./: README.md  pyproject.toml
apps/: admin.py  forms.py  models.py  urls.py  views.py
root/: settings.py  urls.py
templates/: base.html
templates/apps/: contact.html  index.html  products.html  register.html  single.html
